src/test/resources/invalid_tests/InvalidGroupInput.cnna
architecture InvalidGroupInput{
    def input in
    def output out
    
    group 2{
        in ->
        fullyConnected(units=64)
    } merge add()
    output{
        fullyConnected()
        activation.softmax()
    } -> out
}